--- a/dbg.ipynb
+++ b/dbg.ipynb
@@ -9,16 +9,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-02 13:02:14.137250: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:479] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-10-02 13:02:14.194176: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:10575] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-10-02 13:02:14.217091: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1442] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-19 14:17:59.592480: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:479] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-19 14:17:59.660304: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:10575] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-19 14:17:59.692944: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1442] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
       "/home/jet/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Fetching 6 files: 100%|██████████| 6/6 [00:00<00:00, 30840.47it/s]\n",
+      "Fetching 6 files: 100%|██████████| 6/6 [00:00<00:00, 25191.02it/s]\n",
       "/home/jet/.local/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
       "  warnings.warn(\n",
-      "2024-10-02 13:02:53.606030: W external/local_tsl/tsl/platform/cloud/google_auth_provider.cc:184] All attempts to get a Google authentication bearer token failed, returning an empty token. Retrieving token from files failed with \"NOT_FOUND: Could not locate the credentials file.\". Retrieving token from GCE failed with \"FAILED_PRECONDITION: Error executing an HTTP request: libcurl code 6 meaning 'Couldn't resolve host name', error details: Could not resolve host: metadata.google.internal\".\n",
-      "2024-10-02 13:03:02.675885: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+      "2024-10-19 14:18:42.828473: W external/local_tsl/tsl/platform/cloud/google_auth_provider.cc:184] All attempts to get a Google authentication bearer token failed, returning an empty token. Retrieving token from files failed with \"NOT_FOUND: Could not locate the credentials file.\". Retrieving token from GCE failed with \"FAILED_PRECONDITION: Error executing an HTTP request: libcurl code 6 meaning 'Couldn't resolve host name', error details: Could not resolve host: metadata.google.internal\".\n",
+      "2024-10-19 14:18:52.809116: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "from octo.model.octo_model import OctoModel\n",
     "\n",
-    "model = OctoModel.load_pretrained(\"hf://rail-berkeley/octo-small-1.5\")\n",
+    "model = OctoModel.load_pretrained(\"hf://rail-berkeley/octo-base-1.5\")\n",
     "\n",
     "# create RLDS dataset builder\n",
     "builder = tfds.builder_from_directory(builder_dir='gs://gresearch/robotics/bridge/0.1.0/')\n",
@@ -159,16 +159,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-05 21:53:53.959924: W external/local_tsl/tsl/platform/cloud/google_auth_provider.cc:184] All attempts to get a Google authentication bearer token failed, returning an empty token. Retrieving token from files failed with \"NOT_FOUND: Could not locate the credentials file.\". Retrieving token from GCE failed with \"FAILED_PRECONDITION: Error executing an HTTP request: libcurl code 6 meaning 'Couldn't resolve host name', error details: Could not resolve host: metadata.google.internal\".\n",
-      "2024-10-05 21:54:03.657006: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+      "2024-10-19 14:19:20.402440: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instruction: sweep the cloth to the left side of the table\n",
-      "nvbufsurftransform: Could not get EGL display connection\n"
+      "Instruction: sweep the cloth to the left side of the table\n"
      ]
     },
     {
@@ -185,13 +183,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nvbufsurftransform: Could not get EGL display connection\n"
-     ]
     },
     {
      "data": {
@@ -212,7 +203,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:'tasks' is missing items compared to example_batch: {'image_wrist', 'pad_mask_dict/image_wrist', 'timestep', 'pad_mask_dict/timestep'}\n"
+      "WARNING:root:'tasks' is missing items compared to example_batch: {'image_wrist', 'timestep', 'pad_mask_dict/image_wrist', 'pad_mask_dict/timestep'}\n"
      ]
     }
    ],
@@ -247,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +296,15 @@
     "If a key is not present in the observation dictionary, the model will substitute it with padding.\n",
     "\n",
     "Check out the example environments in this folder to help you integrate your own environment!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ee = model.example_batch['observation']"
    ]
   },
   {
